--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Tim Wei 1995",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "logfmt": "^1.3.2",
     "mongodb": "^3.5.2"
