--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "pdf-remote-display",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index",
+    "start": "node app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tim Wei 1995",
