--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-pdf": "^4.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.0"
   },
   "scripts": {
