--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "logfmt": "^1.3.2",
-    "mongodb": "^3.5.2"
+    "mongodb": "^3.5.2",
+    "socket.io": "^2.3.0"
   }
 }
